--- a/41_50Javascript.html
+++ b/41_50Javascript.html
@@ -2,25 +2,42 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>41_50 Javascript</title>
-    <!-- <link rel="stylesheet" href="45_sytle.css"> -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>41_50 Javascript</title>
+  <!-- <link rel="stylesheet" href="45_sytle.css"> -->
+  <!-- <link rel="stylesheet" href="49_style.css"> -->
+
 </head>
 
 <body>
-    <div class="container" onmouseenter="console.log('Mouse is inside the container')" onclick="console.log('Clicked on the mouse')">
-        <button onclick="alert('Hello Welcome to my Page'); let a = 5; console.log(a)">Click Here</button>
-    </div>
 
-    <!-- <script src="41_innnerHTML,outerHTML&other_properties.js"></script> -->
-    <!-- <script src="42_HTML_Attributes&Thier_Methods.js"></script> -->
-    <!-- <script src="43_Insertion_Method.js"></script> -->
-    <!-- <script src="44_inserAdjacentHtml,insertAdjacentElement,insertAdjacentText.js"></script> -->
-    <!-- <script src="45_className&classList.js"></script> -->
-    <!-- <script src="46_setTimeOut,setInterval.js"></script> -->
-    <!-- <script src="47_Browser_Events.js"></script> -->
-    <script src="48_Handling_Browser_Event.js"></script>
+<!-- 49 -->
+
+  <!-- <button onclick="alert('Please Save Me')">Read Fast</button>
+  <button onclick="alert('I am going to die today')">Read Fast</button>
+  <button onclick="alert('Save my Life')">Read Fast</button>
+
+  <h1>Bookmarks</h1>
+  <a href="https://instagram.com"><button class="Bookmark">Instagram</button></a>
+  <a href="https://google.com"> <button class="Bookmark">Google</button></a>
+  <a href="https://linkedin.com"> <button class="Bookmark">LinkedIn</button></a> -->
+
+  <!-- <div id="bulb" class= "bulb-container bulb">
+   Rajeev Is Great 
+  </div> -->
+
+ 
+
+  <!-- <script src="41_innnerHTML,outerHTML&other_properties.js"></script> -->
+  <!-- <script src="42_HTML_Attributes&Thier_Methods.js"></script> -->
+  <!-- <script src="43_Insertion_Method.js"></script> -->
+  <!-- <script src="44_inserAdjacentHtml,insertAdjacentElement,insertAdjacentText.js"></script> -->
+  <!-- <script src="45_className&classList.js"></script> -->
+  <!-- <script src="46_setTimeOut,setInterval.js"></script> -->
+  <!-- <script src="47_Browser_Events.js"></script> -->
+  <!-- <script src="48_Handling_Browser_Event.js"></script> -->
+  <!-- <script src="49_PracticeSet.js"></script> -->
 </body>
 
 </html>
