--- a/51_60Javascript.html
+++ b/51_60Javascript.html
@@ -18,6 +18,8 @@
     <!-- <script src="54_Promises.js"></script> -->
     <!-- <script src="55_Promise.then()and.catch().js"></script> -->
     <!-- <script src="56_Promise_Chaining.then().calls.js"></script> -->
+    <!-- <script src="57_Attaching_Multiple_Handlers_in_Promises.js"></script> -->
+    <!-- <script src="58_PromiseAPI.js"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
      crossorigin="anonymous"></script> -->
