--- a/61_70Javascript.html
+++ b/61_70Javascript.html
@@ -19,7 +19,8 @@
     <!-- <script src="65_FetchAPI.js"></script> -->
     <!-- <script src="66_SendingPostRequestUsingFetchAPI.js"></script> -->
     <!-- <script src="67_Cookies.js"></script> -->
-    <script src="68_LocalStorage.js"></script>
+    <!-- <script src="68_LocalStorage.js"></script> -->
+    <script src="69_sessionStorage.js"></script>
 
     
     
